--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,17 +1,30 @@
-.main {
-   position: absolute;
-    margin: inherit;
-}
-.test {
+body, html, #app {
+  width: 100%;
+  height: 100%; }
+
+#storage {
+  width: 100%;
+  height: 100%;
+  margin-top: -22px;
+  background-image: url("../img/storage/room.jpg");
+  background-size: cover; }
+  #storage h1 {
+    color: #fff; }
+  #storage h2 {
+    color: #333; }
+  #storage .test {
     position: relative;
-    margin-left: 10%;
-    margin-top: 20%;
-    height: 32vh;
-    width: 15vw;
-    background-color: #010304;
-    border-radius: 10px;
-    color: whitesmoke;
-}
-.test p {
-    padding-left: 4px;
-}
+    height: 85%;
+    width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 7px 15px;
+    background: rgba(255, 255, 255, 0.9);
+    color: #333; }
+    #storage .test p {
+      padding-left: 4px; }
+
+.container {
+  margin: inherit; }
+
+/*# sourceMappingURL=style.css.map */
