--- a/resources/assets/sass/style.sass
+++ b/resources/assets/sass/style.sass
@@ -26,6 +26,7 @@ body, html, #app
         margin-right: auto
         padding: 7px 15px
         background: rgba(255, 255, 255, 0.9)
+        // border-radius: 10px
         color: $color-font-default
 
         p
