--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,14 @@
-body, html, #app {
-  width: 100%;
-  height: 100%; }
+#market .flex-container {
+  display: -webkit-flex;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center; }
+  #market .flex-container .flex-item {
+    width: 210px;
+    height: 100px;
+    background: #000;
+    color: #fff;
+    margin: 10px; }
 
 #storage {
   width: 100%;
@@ -12,7 +20,7 @@ body, html, #app {
     color: #fff; }
   #storage h2 {
     color: #333; }
-  #storage .test {
+  #storage .row {
     position: relative;
     height: 85%;
     width: 1200px;
@@ -21,22 +29,39 @@ body, html, #app {
     padding: 7px 15px;
     background: rgba(255, 255, 255, 0.9);
     color: #333; }
-    #storage .test p {
+    #storage .row div {
+      height: 460px;
+      overflow-x: hidden; }
+    #storage .row p {
       padding-left: 4px; }
+
+body, html, #app {
+  width: 100%;
+  height: 100%; }
 
 .container {
   margin: inherit; }
 
-.product {
-    width: 25%;
-    height: 20%;
-    display: inline-block;
-    margin: 10px 10px 10px 10px;
-    background-color: black;
-    color: white;
-}
-.product p {
-    color: red;
-    font-size: 30px;
-}
+.main {
+  width: 100%;
+  height: 100%;
+  margin-top: -22px;
+  background-image: url("../img/storage/room.jpg");
+  background-size: cover; }
+  .main h1 {
+    color: #fff; }
+  .main h2 {
+    color: #333; }
+  .main .row {
+    position: relative;
+    height: 85%;
+    width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 7px 15px;
+    background: rgba(255, 255, 255, 0.9);
+    color: #333; }
+    .main .row p {
+      padding-left: 4px; }
+
 /*# sourceMappingURL=style.css.map */
