--- a/resources/assets/sass/style.sass
+++ b/resources/assets/sass/style.sass
@@ -1,11 +1,16 @@
 $color-font-default: #333
 
+@import "market.sass"
+@import "storage.sass"
+
 body, html, #app
     width: 100%
     height: 100%
 
-// container principale
-#storage
+.container
+    margin: inherit
+
+.main
     width: 100%
     height: 100%
     margin-top: -22px
@@ -18,7 +23,7 @@ body, html, #app
     h2
         color: $color-font-default
 
-    .test
+    .row
         position: relative
         height: 85%
         width: 1200px
@@ -30,6 +35,3 @@ body, html, #app
 
         p
             padding-left: 4px
-
-.container
-    margin: inherit
