--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,45 +1,33 @@
 #market .flex-container {
-    display: -webkit-flex;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-}
-
-#market .flex-container .flex-item {
+  display: -webkit-flex;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center; }
+  #market .flex-container .flex-item {
     width: 210px;
     height: 100px;
     background: #000;
     color: #fff;
-    margin: 10px;
-}
+    margin: 10px; }
 
-#storage .row div {
-    height: 460px;
-    overflow-x: hidden;
-}
+#storage .row .items {
+  overflow-x: hidden; }
 
 body, html, #app {
-    width: 100%;
-    height: 100%;
-}
+  width: 100%;
+  height: 100%; }
 
 .main {
-    width: 100%;
-    height: 100%;
-    margin-top: -22px;
-    background-image: url("../img/storage/room.jpg");
-    background-size: cover;
-}
-
-.main h1 {
-    color: #fff;
-}
-
-.main h2 {
-    color: #333;
-}
-
-.main .row {
+  width: 100%;
+  height: 100%;
+  margin-top: -22px;
+  background-image: url("../img/storage/room.jpg");
+  background-size: cover; }
+  .main h1 {
+    color: #fff; }
+  .main h2 {
+    color: #333; }
+  .main .row {
     position: relative;
     height: 85%;
     width: 1200px;
@@ -47,11 +35,8 @@ body, html, #app {
     margin-right: auto;
     padding: 7px 15px;
     background: rgba(255, 255, 255, 0.9);
-    color: #333;
-}
-
-.main .row p {
-    padding-left: 4px;
-}
+    color: #333; }
+    .main .row p {
+      padding-left: 4px; }
 
 /*# sourceMappingURL=style.css.map */
