--- a/public/css/style.css
+++ b/public/css/style.css
@@ -21,7 +21,7 @@ body, html, #app {
   width: 100%;
   height: 100%;
   margin-top: -22px;
-  background-image: url("../img/storage/room.jpg");
+  background-image: url("../../resources/assets/img/storage/room.jpg");
   background-size: cover; }
   .main h1 {
     color: #fff; }
