add little css better than early :d

--- a/resources/assets/sass/market.sass
+++ b/resources/assets/sass/market.sass
@@ -7,7 +7,12 @@
 
         .flex-item
             width: 210px
-            height: 100px
-            background: #000
-            color: #fff
+            background: #b1b1b1
+            color: #000
             margin: 10px
+            
+            form
+                width: 33%
+                margin-left: 15%
+                margin-bottom: 5%
+                float: left
