Add sass for Navigation

--- a/resources/assets/sass/style.sass
+++ b/resources/assets/sass/style.sass
@@ -1,5 +1,13 @@
-$color-font-default: #333
+$black: #333
+$white: #eee
+$dark-grey: #323232
+$light-grey: #474747
+$dark-blue: #00497d
+$light-blue: #3d637d
+$orange: #eb8b4d
+$light-orange: #bd904e
 
+@import "nav.sass"
 @import "home.sass"
 @import "market.sass"
 @import "storage.sass"
@@ -19,7 +27,7 @@ body, html, #app
     color: #fff
 
   h2
-    color: $color-font-default
+    color: $black
 
   .row
     position: relative
@@ -29,7 +37,7 @@ body, html, #app
     margin-right: auto
     padding: 7px 15px
     background: rgba(255, 255, 255, 0.9)
-    color: $color-font-default
+    color: $black
 
     p
       padding-left: 4px
