--- a/resources/assets/sass/style.sass
+++ b/resources/assets/sass/style.sass
@@ -4,21 +4,25 @@ $dark-grey: #323232
 $light-grey: #474747
 $dark-blue: #00497d
 $light-blue: #3d637d
+$dark-orange: #cb733a
 $orange: #eb8b4d
 $light-orange: #bd904e
+$shadow: 0 0 15px rgba(0, 0, 0, 0.7)
 
 @import "nav.sass"
 @import "home.sass"
 @import "market.sass"
 @import "storage.sass"
+@import "admin.sass"
 
-body, html, #app
+body, html
   width: 100%
   height: 100%
+
+  #app
+    height: calc(100% - 51px)
 
 .main
-  width: 100%
-  height: 100%
   margin-top: -22px
   background-image: url('../img/storage/room.jpg')
   background-size: cover
@@ -41,3 +45,11 @@ body, html, #app
 
     p
       padding-left: 4px
+
+.btn-primary
+  background-color: $orange
+  border-color: $light-orange
+
+.btn-primary:hover, .btn-primary:focus
+  background-color: $dark-orange
+  border-color: $light-orange
