--- a/resources/assets/sass/style.sass
+++ b/resources/assets/sass/style.sass
@@ -24,7 +24,7 @@ body, html
 
 .main
   margin-top: -22px
-  background-image: url('../img/storage/room.jpg')
+  // background-image: url('../img/storage/room.jpg')
   background-size: cover
 
   h1
