Add function reduce vertical navbar

--- a/resources/assets/sass/admin.sass
+++ b/resources/assets/sass/admin.sass
@@ -1,4 +1,4 @@
-.navbar-vertical
+#navbar-vertical
   position: relative
   float: left
   height: 100%
@@ -30,11 +30,11 @@
     .fa
       position: absolute
       top: calc(50% - 7px)
-      left: 50%
+      left: 57%
       color: $white
 
     .fa-plus
-      display: none
+      opacity: 0
 
 .main
   background-color: #fff
