--- a/resources/assets/sass/admin.sass
+++ b/resources/assets/sass/admin.sass
@@ -1,5 +1,5 @@
 #navbar-vertical
-  position: relative
+  position: fixed
   float: left
   height: 100%
   width: 150px
@@ -40,9 +40,11 @@
   background-color: #fff
 
 #admin
-  width: calc(100% - 150px)
+  position: relative
   float: left
+  width: calc(100% - 150px)
   height: 100%
+  margin-left: 150px
   padding-left: 50px
   padding-right: 20px
   overflow-x: hidden
