Update design Skills page

--- a/resources/assets/sass/style.sass
+++ b/resources/assets/sass/style.sass
@@ -13,6 +13,7 @@ $shadow: 0 0 15px rgba(0, 0, 0, 0.7)
 @import "home.sass"
 @import "market.sass"
 @import "storage.sass"
+@import "skills.sass"
 @import "admin.sass"
 
 body, html
